--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lora&display=swap" rel="stylesheet" />
+
   <style>
     html {
       scroll-behavior: smooth;
@@ -18,11 +22,19 @@
       background-repeat: no-repeat;
       background-color: black;
     }
+
+    .titulo {
+      font-family: 'Playfair Display', serif;
+    }
+
+    .parrafo {
+      font-family: 'Lora', serif;
+    }
   </style>
 </head>
 <body class="text-gray-100 min-h-screen flex flex-col">
 
-  <!-- Header de navegación -->
+  <!-- Header -->
   <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
       <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
@@ -36,11 +48,11 @@
     </div>
   </header>
 
-  <!-- Sección principal -->
+  <!-- Presentación -->
   <main class="py-24 px-4 bg-black bg-opacity-70 min-h-screen flex items-center justify-center text-center">
     <div class="max-w-2xl mx-auto">
-      <h2 class="text-4xl font-bold text-green-300 mb-4">Bienvenido a Vegas de Breña Alta</h2>
-      <p class="text-lg text-gray-200">
+      <h2 class="text-4xl font-bold text-green-300 mb-4 titulo">Bienvenido a Vegas de Breña Alta</h2>
+      <p class="text-lg text-gray-200 parrafo">
         Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
       </p>
     </div>
