--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
   <!-- Presentación -->
   <main class="py-24 px-4 bg-black bg-opacity-70 min-h-screen flex items-center justify-center text-center">
-    <div class="max-w-2xl mx-auto">
-      <h2 class="text-4xl font-bold text-green-300 mb-4 titulo">Bienvenido a Vegas de Breña Alta</h2>
-      <p class="text-lg text-gray-200 parrafo">
-        Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
-      </p>
-    </div>
-  </main>
+  <div class="max-w-2xl mx-auto">
+    <h2 class="text-5xl font-bold text-green-300 mb-6 titulo">Bienvenido a Vegas de Breña Alta</h2>
+    <p class="text-xl text-gray-200 parrafo">
+      Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
+    </p>
+  </div>
+</main>
 
   <!-- Footer -->
   <footer class="text-center py-6 bg-black bg-opacity-80">
