--- a/index.html
+++ b/index.html
@@ -30,11 +30,20 @@
     .parrafo {
       font-family: 'Lora', serif;
     }
+
+    .fade-in {
+      animation: fadeIn 0.8s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
-<body class="text-gray-100 min-h-screen flex flex-col">
+<body class="fade-in text-gray-100 min-h-screen flex flex-col">
 
-  <!-- Header -->
+  <!-- Header de navegación -->
   <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
     <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
       <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
@@ -48,15 +57,15 @@
     </div>
   </header>
 
-  <!-- Presentación -->
+  <!-- Presentación principal -->
   <main class="py-24 px-4 bg-black bg-opacity-70 min-h-screen flex items-center justify-center text-center">
-  <div class="max-w-2xl mx-auto">
-    <h2 class="text-5xl font-bold text-green-300 mb-6 titulo">Bienvenido a Vegas de Breña Alta</h2>
-    <p class="text-xl text-gray-200 parrafo">
-      Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
-    </p>
-  </div>
-</main>
+    <div class="max-w-2xl mx-auto">
+      <h2 class="text-5xl font-bold text-green-300 mb-6 titulo">Bienvenido a Vegas de Breña Alta</h2>
+      <p class="text-xl text-gray-200 parrafo">
+        Tabaco artesanal de calidad, cultivado en las tierras volcánicas de La Palma.
+      </p>
+    </div>
+  </main>
 
   <!-- Footer -->
   <footer class="text-center py-6 bg-black bg-opacity-80">
@@ -65,4 +74,5 @@
 
 </body>
 </html>
+
 
