--- a/nosotros.html
+++ b/nosotros.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vegas de Breña Alta</title>
+  <title>Nosotros - Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lora&display=swap" rel="stylesheet" />
+
   <style>
     html {
       scroll-behavior: smooth;
@@ -18,9 +22,26 @@
       background-repeat: no-repeat;
       background-color: black;
     }
+
+    .titulo {
+      font-family: 'Playfair Display', serif;
+    }
+
+    .parrafo {
+      font-family: 'Lora', serif;
+    }
+
+    .fade-in {
+      animation: fadeIn 0.8s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
-<body class="text-gray-100 min-h-screen flex flex-col">
+<body class="fade-in text-gray-100 min-h-screen flex flex-col">
 
   <!-- Header de navegación -->
   <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
@@ -36,22 +57,23 @@
     </div>
   </header>
 
-  <!-- Contenido -->
-  <main class="flex-grow flex items-center justify-center px-2 sm:px-4 py-10 sm:py-16">
-    <section class="relative z-10 max-w-3xl w-full bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-4 sm:p-10 text-center">
-      <h2 class="text-2xl sm:text-4xl font-bold text-green-200 mb-6">Nuestra Historia</h2>
-      <p class="text-sm sm:text-lg text-gray-300 mb-4 leading-relaxed text-justify">
+  <!-- Contenido principal -->
+  <main class="py-20 px-4 bg-black bg-opacity-70 flex-grow">
+    <section class="max-w-4xl mx-auto text-center">
+      <h2 class="text-4xl font-bold text-green-300 mb-6 titulo">Nuestra Historia</h2>
+      <p class="text-xl text-gray-200 mb-4 parrafo text-justify leading-relaxed">
         En <strong>Vegas de Breña Alta</strong> nos dedicamos a preservar la tradición del tabaco artesanal, cultivado con esmero en tierras volcánicas canarias. Nuestra pasión por el detalle y la calidad nos impulsa a ofrecer un producto único, elaborado a mano y con respeto por el legado cultural que representa.
       </p>
-      <p class="text-sm sm:text-lg text-gray-300 leading-relaxed text-justify">
+      <p class="text-xl text-gray-200 parrafo text-justify leading-relaxed">
         Cada tabaco cuenta una historia de dedicación, conocimiento transmitido por generaciones y un amor profundo por lo auténtico. Nuestro compromiso es brindar experiencias que conecten con los sentidos y honren nuestras raíces.
       </p>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="text-center py-6 mt-auto">
-    <p class="text-xs text-gray-300">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
+  <footer class="text-center py-6 bg-black bg-opacity-80">
+    <p class="text-sm text-gray-400">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
+
 </body>
 </html>
