--- a/contacto.html
+++ b/contacto.html
@@ -3,42 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vegas de Breña Alta</title>
+  <title>Contacto - Vegas de Breña Alta</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
     body {
+      font-family: 'Segoe UI', sans-serif;
       background-image: url('images/fondo-contacto.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-color: black;
+    }
+    nav a {
+      display: inline-block;
+      min-width: 85px;
+      text-align: center;
+      transition: all 0.3s ease-in-out;
+    }
+    nav a:hover {
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body class="text-gray-100 min-h-screen flex flex-col">
-
-  <!-- Header de navegación -->
-  <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
-      <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center gap-3 text-gray-200">
-        <a href="index.html" class="hover:text-green-300">Inicio</a>
-        <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
-        <a href="productos.html" class="hover:text-green-300">Productos</a>
-        <a href="galeria.html" class="hover:text-green-300">Galería</a>
-        <a href="contacto.html" class="text-green-300 font-semibold">Contacto</a>
+  <!-- Navegación -->
+  <header class="bg-black bg-opacity-60 shadow-md sticky top-0 z-50 backdrop-blur">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center gap-2">
+      <h1 class="text-xl md:text-2xl font-bold text-green-200 text-center transition duration-300 hover:scale-105">Vegas de Breña Alta</h1>
+      <nav class="flex flex-wrap justify-center gap-2 text-sm md:text-base text-gray-200">
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="productos.html">Productos</a>
+        <a href="galeria.html">Galería</a>
+        <a href="contacto.html" class="text-green-300 font-semibold underline scale-105">Contacto</a>
       </nav>
     </div>
   </header>
 
   <!-- Contenido principal -->
-  <main class="flex-grow flex items-center justify-center px-4 py-10 sm:py-14">
-    <section class="relative z-10 w-full max-w-[95%] md:max-w-2xl bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-6 sm:p-8">
+  <main class="flex-grow flex items-center justify-center px-4 py-10 sm:py-14 font-sans">
+    <section class="relative z-10 w-full max-w-[95%] md:max-w-2xl bg-black bg-opacity-70 rounded-2xl shadow-xl backdrop-blur p-6 sm:p-8 transition duration-300 hover:shadow-2xl">
       <h2 class="text-3xl sm:text-4xl font-bold text-green-200 mb-6 text-center">Contáctanos</h2>
       <p class="text-base sm:text-lg text-gray-300 mb-6 text-center">Puedes escribirnos, llamarnos o enviarnos un WhatsApp. Te responderemos lo antes posible.</p>
 
@@ -47,7 +51,7 @@
         <p><span class="text-green-400 font-semibold">📧 Email:</span> info@vegasbrena.com</p>
         <p><span class="text-green-400 font-semibold">📞 Teléfono:</span> +34 922 123 456</p>
         <p><span class="text-green-400 font-semibold">📍 Dirección:</span> Calle Real 12, Breña Alta, Santa Cruz de La Palma</p>
-        <p><span class="text-green-400 font-semibold">💬 WhatsApp:</span> <a href="https://wa.me/34628478904" target="_blank" class="underline hover:text-green-300">+34 628 478 904</a></p>
+        <p><span class="text-green-400 font-semibold">💬 WhatsApp:</span> <a href="https://wa.me/34628478904" target="_blank" class="underline hover:text-green-300 transition duration-300">+34 628 478 904</a></p>
         <p><span class="text-green-400 font-semibold">🕒 Horario de atención:</span> Lunes a Sábado, de 9:00 a 18:00</p>
       </div>
 
@@ -60,23 +64,23 @@
 
         <div>
           <label for="nombre" class="block text-sm font-semibold text-green-300 mb-1">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="Tu nombre completo">
+          <input type="text" id="nombre" name="nombre" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400 transition duration-200" placeholder="Tu nombre completo">
         </div>
         <div>
           <label for="correo" class="block text-sm font-semibold text-green-300 mb-1">Correo electrónico:</label>
-          <input type="email" id="correo" name="correo" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="tucorreo@email.com">
+          <input type="email" id="correo" name="correo" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400 transition duration-200" placeholder="tucorreo@email.com">
         </div>
         <div>
           <label for="mensaje" class="block text-sm font-semibold text-green-300 mb-1">Mensaje o pedido:</label>
-          <textarea id="mensaje" name="mensaje" rows="4" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="Escribe aquí tu mensaje, comentario o pedido..."></textarea>
+          <textarea id="mensaje" name="mensaje" rows="4" required class="w-full px-4 py-2 rounded-lg bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-green-400 transition duration-200" placeholder="Escribe aquí tu mensaje, comentario o pedido..."></textarea>
         </div>
-        <button type="submit" class="w-full py-2 px-4 bg-green-500 hover:bg-green-600 rounded-lg text-white font-semibold transition">Enviar mensaje</button>
+        <button type="submit" class="w-full py-2 px-4 bg-green-500 hover:bg-green-600 rounded-lg text-white font-semibold transition duration-300 hover:scale-105">Enviar mensaje</button>
       </form>
 
       <!-- Mapa -->
       <div class="mt-10">
         <h3 class="text-lg font-semibold text-green-300 mb-2">¿Dónde estamos?</h3>
-        <div class="aspect-w-16 aspect-h-9 w-full rounded-lg overflow-hidden shadow-lg">
+        <div class="aspect-w-16 aspect-h-9 w-full rounded-lg overflow-hidden shadow-lg transition duration-300 hover:scale-[1.02]">
           <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3451.323097578971!2d-17.7642585!3d28.6388417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc6b7cc2d30b4211%3A0x2c340116cb1c8697!2sBre%C3%B1a%20Alta%2C%20Santa%20Cruz%20de%20Tenerife!5e0!3m2!1ses!2ses!4v1718562450000!5m2!1ses!2ses" 
             width="100%" 
@@ -97,6 +101,3 @@
   </footer>
 </body>
 </html>
-
-
-
